# ImageAlfred

./: .gitignore  HF_README.md  Makefile  README.md  claude_desktop_config.json  hf.sh  pyproject.toml  requirements.txt
src/: app.py  modal_app.py  modal_client.py  modal_test.py  privacy_modal_client.py  privacy_tool.py  recolor_tool.py  tools.py  utils.py
src/test/: basic.ipynb  jupyter_inside_modal.py
test/: basic.ipynb  test_modal.py  zeroshot_modal.py
