[project]
name = "ImageAlfred"
version = "0.1.0"
description = "Alfred of Images: An MCP server to handle your image edits."
authors = ["Mahan-ym, Soodoo"]
license = "Apache-2.0"
requires-python = ">=3.13"


dependencies = [
    "gradio>=5.32.1",
    "modal>=1.0.2",
    "numpy>=2.2.6",
    "pillow>=11.2.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
